==> apache/nuttx/arch/risc-v/src/ch32v/ch32v_serial.c <==
#include <nuttx/config.h>
#include <nuttx/arch.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <unistd.h>
#include <string.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/serial/serial.h>
#include <nuttx/fs/ioctl.h>
#include <nuttx/serial/tioctl.h>
#include "ch32v_lowputc.h"
#include "ch32v_gpio.h"
#include "riscv_internal.h"
#include "chip.h"
#define CH32V_CONSOLE_IDX    0
#define CH32V_CONSOLE_BAUD   CONFIG_UART0_BAUD
#define CH32V_CONSOLE_BITS   CONFIG_UART0_BITS
#define CH32V_CONSOLE_PARITY CONFIG_UART0_PARITY
#define CH32V_CONSOLE_2STOP  CONFIG_UART0_2STOP
#define CH32V_CONSOLE_TX     GPIO_UART0_TX
#define CH32V_CONSOLE_RX     GPIO_UART0_RX
#define HAVE_UART
#define CH32V_CONSOLE_IDX    1
#define CH32V_CONSOLE_BAUD   CONFIG_UART1_BAUD
#define CH32V_CONSOLE_BITS   CONFIG_UART1_BITS
#define CH32V_CONSOLE_PARITY CONFIG_UART1_PARITY
#define CH32V_CONSOLE_2STOP  CONFIG_UART1_2STOP
#define CH32V_CONSOLE_TX     GPIO_UART1_TX
#define CH32V_CONSOLE_RX     GPIO_UART1_RX
#define HAVE_UART
#define CONSOLE_DEV g_uart0port /* UART0 is console */
#define TTYS0_DEV   g_uart0port /* UART0 is ttyS0 */
#define SERIAL_CONSOLE 1
#define CONSOLE_DEV g_uart1port /* UART0 is console */
#define TTYS0_DEV g_uart0port /* UART0 is ttyS0 */
#define SERIAL_CONSOLE 1

static void ch32v_shutdown(struct uart_dev_s *dev)
{
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;
  uint8_t uart_idx = priv->config.idx;

  /* Disable uart before config */

  modifyreg32(ch32v_UART_UTX_CONFIG(uart_idx), UART_UTX_CONFIG_CR_EN, 0);
  modifyreg32(ch32v_UART_URX_CONFIG(uart_idx), UART_URX_CONFIG_CR_EN, 0);
}

static int ch32v_attach(struct uart_dev_s *dev)
{
  int                  ret;
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;

  ret = irq_attach(priv->irq, __uart_interrupt, (void *)dev);
  if (ret == OK)
    {
      up_enable_irq(priv->irq);
    }

  return ret;
}

static void ch32v_detach(struct uart_dev_s *dev)
{
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;

  /* Disable interrupts */

  up_disable_irq(priv->irq);

  /* Detach from the interrupt */

  irq_detach(priv->irq);
}

static int ch32v_receive(struct uart_dev_s *dev, unsigned int *status)
{
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;
  uint8_t uart_idx = priv->config.idx;
  int rxdata;

  /* Return status information */

  if (status)
    {
      *status = 0; /* We are not yet tracking serial errors */
    }

  /* if uart fifo cnts > 0 */

  if (getreg32(CH32V_UART_FIFO_CONFIG_1(uart_idx)) & \
      UART_FIFO_CONFIG_1_RX_CNT_MASK)
    {
      rxdata = getreg32(CH32V_UART_FIFO_RDATA(uart_idx)) & \
        UART_FIFO_RDATA_MASK;
    }
  else
    {
      rxdata = -1;
    }
  return rxdata;
}

static void ch32v_rxint(struct uart_dev_s *dev, bool enable)
{
  uint32_t int_mask;
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;
  uint8_t uart_idx = priv->config.idx;
  irqstate_t       flags = enter_critical_section();

  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      int_mask = getreg32(CH32V_UART_INT_MASK(uart_idx));
      int_mask &= ~(UART_INT_MASK_CR_URX_FIFO_MASK);
      int_mask &= ~(UART_INT_MASK_CR_URX_END_MASK);
      putreg32(int_mask, CH32V_UART_INT_MASK(uart_idx));
#endif
    }
  else
    {
      int_mask = getreg32(CH32V_UART_INT_MASK(uart_idx));
      int_mask |= UART_INT_MASK_CR_URX_FIFO_MASK;
      int_mask |= UART_INT_MASK_CR_URX_END_MASK;
      putreg32(int_mask, CH32V_UART_INT_MASK(uart_idx));
    }

  leave_critical_section(flags);
}

static bool ch32v_rxavailable(struct uart_dev_s *dev)
{
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;
  uint8_t uart_idx          = priv->config.idx;

  /* Return true is data is available in the receive data buffer */

  return (getreg32(CH32V_UART_FIFO_CONFIG_1(uart_idx)) & \
          UART_FIFO_CONFIG_1_RX_CNT_MASK) != 0;
}

static void ch32v_send(struct uart_dev_s *dev, int ch)
{
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;
  uint8_t uart_idx          = priv->config.idx;

  /* Wait for FIFO to be empty */

  while ((getreg32(CH32V_UART_FIFO_CONFIG_1(uart_idx)) & \
         UART_FIFO_CONFIG_1_TX_CNT_MASK) == 0);

  putreg32(ch, CH32V_UART_FIFO_WDATA(uart_idx));
}

static void ch32v_txint(struct uart_dev_s *dev, bool enable)
{
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;
  uint8_t uart_idx          = priv->config.idx;
  irqstate_t       flags;
  uint32_t         int_mask;

  flags = enter_critical_section();

  if (enable)
    {
#ifndef CONFIG_SUPPRESS_SERIAL_INTS
      /* Enable the TX interrupt */

      int_mask = getreg32(CH32V_UART_INT_MASK(uart_idx));
      int_mask &= ~(UART_INT_MASK_CR_UTX_FIFO_MASK);
      putreg32(int_mask, CH32V_UART_INT_MASK(uart_idx));

      /* Fake a TX interrupt here by just calling uart_xmitchars() with
       * interrupts disabled (note this may recurse).
       */

      uart_xmitchars(dev);
#endif
    }
  else
    {
      /* Disable the TX interrupt */

      int_mask = getreg32(CH32V_UART_INT_MASK(uart_idx));
      int_mask |= UART_INT_MASK_CR_UTX_FIFO_MASK;
      putreg32(int_mask, CH32V_UART_INT_MASK(uart_idx));
    }

  leave_critical_section(flags);
}

static bool ch32v_txready(struct uart_dev_s *dev)
{
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;
  uint8_t uart_idx          = priv->config.idx;

  /* Return TRUE if the TX FIFO is not full */

  return (getreg32(CH32V_UART_FIFO_CONFIG_1(uart_idx)) & \
          UART_FIFO_CONFIG_1_TX_CNT_MASK) != 0;
}

static bool ch32v_txempty(struct uart_dev_s *dev)
{
  struct ch32v_uart_s *priv = (struct ch32v_uart_s *)dev->priv;
  uint8_t uart_idx          = priv->config.idx;

  return (getreg32(CH32V_UART_FIFO_CONFIG_1(uart_idx)) & \
          UART_FIFO_CONFIG_1_TX_CNT_MASK) == 0;
}

void riscv_serialinit(void)
{
  int  i;
  char devname[16];

#ifdef HAVE_SERIAL_CONSOLE
  /* Register the console */

  uart_register("/dev/console", &CONSOLE_DEV);
#endif

  /* Register all UARTs */

  strcpy(devname, "/dev/ttySx");
  for (i = 0; i < sizeof(g_uart_devs) / sizeof(g_uart_devs[0]); i++)
    {
      if (g_uart_devs[i] == 0)
        {
          continue;
        }

      /* Don't create a device for the console - we did that above */

      if (g_uart_devs[i]->isconsole)
        {
          continue;
        }

      /* Register USARTs as devices in increasing order */

      devname[9] = '0' + i;
      uart_register(devname, g_uart_devs[i]);
    }
}

void riscv_serialinit(void)
{
}
